# foghorn-irc

./: .dockerignore  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  Dockerfile  README.md  SECURITY.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
foghorn/: __init__.py  cli.py  enums.py  errors.py  message.py  numerics.py  parsing.py  server.py  standards.py  storage.py  typing.py  utils.py
foghorn/commands/: __init__.py  base.py  cap.py  nick.py  passwd.py
tests/: TODO.txt  conftest.py  test_message_parser.py  test_utils.py
