[tool.poetry]
name = "foghorn"
version = "0.1.0"
description = "A quasi-compliant IRCv3 server written off Modern IRC."
authors = ["Elias Gabriel <me@eliasfgabriel.com>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
typer = {extras = ["all"], version = "^0.3.2"}
gevent = {extras = ["dnspython"], version = "^21.1.2"}
cffi = "^1.14.5"

[tool.poetry.dev-dependencies]
irc-parser-tests = "^0.0.4"
pytest = "^6.2.4"
black = { version = "^21.5b1", optional = true }
flake8 = { version = "^3.9.2", optional = true }
isort = { version = "^5.8.0", optional = true }

[tool.poetry.extras]
linting = ["black", "flake8", "isort"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
