[tool.poetry]
name = "foghorn"
version = "0.1.0"
description = "A quasi-compliant IRCv3 server written off Modern IRC."
authors = ["Elias Gabriel <me@eliasfgabriel.com>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
typer = {extras = ["all"], version = "^0.3.2"}
gevent = {extras = ["dnspython"], version = "^21.1.2"}
cffi = "^1.14.5"
redis = "^3.5.3"
hiredis = "^2.0.0"

[tool.poetry.dev-dependencies]
irc-parser-tests = "^0.0.4"
pytest = "^6.2.4"
black = {version = "^21.5b1", optional = true}
isort = {version = "^5.8.0", optional = true}
flake8 = {version = "^3.9.2", optional = true}
mypy = {version = "^0.902", optional = true}
types-atomicwrites = {version = "^0.1.5", optional = true}
types-click = {version = "^7.1.2", optional = true}
types-pkg-resources = {version = "^0.1.3", optional = true}
types-redis = {version = "^3.5.2", optional = true}
types-toml = {version = "^0.1.3", optional = true}

[tool.poetry.extras]
linting = ["black", "isort", "flake8", "mypy", "types-atomicwrites", "types-click", "types-pkg_resources", "types-redis", "types-toml"]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
warn_return_any = true
show_column_numbers = true
follow_imports = "silent"
warn_unreachable = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
