[project]
name = "foghorn-irc"
version = "0.0.0"
description = "A quasi-compliant IRCv3 server written referencing Modern IRC."
authors = [
    {name = "Elias Gabriel", email = "me@eliasfgabriel.com"},
]
dependencies = [
    "typer[all]>=0.7.0",
    "gevent>=22.10.2",
    "redis>=4.5.1",
    "hiredis>=2.2.2",
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "AGPL-3.0"}

[project.scripts]
foghorn = "foghorn.cli:app"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.2.2",
    "irc-parser-tests>=0.0.4",
]

[tool.pytest.ini_options]
addopts = "-ra -v"
asyncio_mode="auto"
testpaths = [
    "tests"
]

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
